<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstscreen.MainActivity">

    <ImageView
        android:id="@+id/imgPicture"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/image_first_screen"
        android:src="@drawable/ic_baseline_person_add_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPicture" />

    <EditText
        android:id="@+id/edtStatus"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtStatus" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>